--- a/.hintrc
+++ b/.hintrc
@@ -1,5 +1,14 @@
 {
   "extends": [
     "development"
-  ]
+  ],
+  "hints": {
+    "meta-viewport": "off",
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
+    ]
+  }
 }
